inactive/applications/minecraft-server/minecraft-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minecraft
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: minio
      podSelector:
        matchLabels:
          app: minio
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    # Allow traffic to 10.10.9.213 port 30000 for s3
  - to:
    - ipBlock:
        cidr: 10.10.9.213/32
    ports:
    - protocol: TCP
      port: 30000

  policyTypes:
  - Egress
